# Multilingual-Word-Aligner

./: .gitignore  CONTRIBUTORS.md  LICENSE  NOTES.md  README.md  align_wav.py  environment.yml  mwa_cli.py  notebook.txt  pyproject.toml  requirements.txt  user_guide.md
inference/configuration/: config.yaml  constants.py  get_models_configuration.py  validate_input.py
inference/examples/: english.TextGrid  english.txt  german.txt
inference/models/: predict.py  preprocess.py  utils.py
inference/models/conformer/: conformer.py
inference/models/dp_algorithm/: extract_features.py  utils.py
inference/models/mms/: mms.py
inference/models/unsupSeg/: dataloader.py  next_frame_classifier.py  requirements.txt  unsupseg_classifier.py
inference/models/unsupSeg/conf/: config.yaml
inference/results_utils/: graphs.py
train/: README.md  train_venv_requirements.txt
train/evaluation/: compare_results.py  evaluate.py
train/forcedAlignment/: optimize_flow.py  train_sequence_model.py
train/forcedAlignment/dynamic_prog/: DP_utils.py  dynamic_prog_statistics.py  extract_features.py  loss_DP.py  train_DP.py
train/forcedAlignment/utils/: buckeye_preprocess.py  constants.py  custom_loss.py  logger_utils.py  preprocess.py  timit_preprocess.py  train.py
train/heat_map/: heat_maps.py  heat_maps_ploter.py
train/models/: utils.py
train/models/MMS/: MMS_details.py  mms.py  mms_DP.py
train/models/UnSupSeg/: next_frame_classifier.py  predict.py
train/models/UnSupSeg/conf/: config.yaml
train/models/for_train/: transformer.py
train/models/for_train/vgg/: vgg.py
(+2 files in other folders)
